// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronLink can have specific variants 1`] = `
.c4 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1rem;
}

.c4::before {
  content: '\\f107';
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 500;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100%;
  vertical-align: top;
}

.c1:link,
.c1:visited {
  color: #2B8000;
}

.c3 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
}

.c0:hover .c3 {
  -webkit-transform: translateX(0.25rem);
  -ms-transform: translateX(0.25rem);
  transform: translateX(0.25rem);
}

<a
  class="c0 c1"
  direction="right"
  href="https://telus.com"
>
  <span
    class="c2"
  >
    <span>
      Go home
    </span>
    <span
      class="c3"
      direction="right"
    >
      <i
        aria-hidden="true"
        class="c4"
      />
    </span>
  </span>
</a>
`;

exports[`ChevronLink can have specific variants 2`] = `
.c4 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1rem;
}

.c4::before {
  content: '\\f107';
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 500;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100%;
  vertical-align: top;
}

.c1:link,
.c1:visited {
  color: #4b286d;
}

.c3 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
}

.c0:hover .c3 {
  -webkit-transform: translateX(0.25rem);
  -ms-transform: translateX(0.25rem);
  transform: translateX(0.25rem);
}

<a
  class="c0 c1"
  direction="right"
  href="https://telus.com"
>
  <span
    class="c2"
  >
    <span>
      Go home
    </span>
    <span
      class="c3"
      direction="right"
    >
      <i
        aria-hidden="true"
        class="c4"
      />
    </span>
  </span>
</a>
`;

exports[`ChevronLink can have specific variants 3`] = `
.c4 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1rem;
}

.c4::before {
  content: '\\f107';
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 500;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100%;
  vertical-align: top;
}

.c1:link,
.c1:visited {
  color: #2B8000;
}

.c3 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
}

.c0:hover .c3 {
  -webkit-transform: translateX(0.25rem);
  -ms-transform: translateX(0.25rem);
  transform: translateX(0.25rem);
}

<a
  class="c0 c1"
  direction="right"
  href="https://telus.com"
>
  <span
    class="c2"
  >
    <span>
      Go home
    </span>
    <span
      class="c3"
      direction="right"
    >
      <i
        aria-hidden="true"
        class="c4"
      />
    </span>
  </span>
</a>
`;

exports[`ChevronLink can have specific variants 4`] = `
.c4 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1rem;
}

.c4::before {
  content: '\\f107';
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 500;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100%;
  vertical-align: top;
}

.c1:link,
.c1:visited {
  color: #fff;
}

.c3 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
}

.c0:hover .c3 {
  -webkit-transform: translateX(0.25rem);
  -ms-transform: translateX(0.25rem);
  transform: translateX(0.25rem);
}

<a
  class="c0 c1"
  direction="right"
  href="https://telus.com"
>
  <span
    class="c2"
  >
    <span>
      Go home
    </span>
    <span
      class="c3"
      direction="right"
    >
      <i
        aria-hidden="true"
        class="c4"
      />
    </span>
  </span>
</a>
`;

exports[`ChevronLink renders 1`] = `
.c4 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1rem;
}

.c4::before {
  content: '\\f107';
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 500;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 100%;
  vertical-align: top;
}

.c1:link,
.c1:visited {
  color: #2B8000;
}

.c3 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
}

.c0:hover .c3 {
  -webkit-transform: translateX(0.25rem);
  -ms-transform: translateX(0.25rem);
  transform: translateX(0.25rem);
}

<a
  class="c0 c1"
  direction="right"
  href="test.com"
>
  <span
    class="c2"
  >
    <span>
      Go home
    </span>
    <span
      class="c3"
      direction="right"
    >
      <i
        aria-hidden="true"
        class="c4"
      />
    </span>
  </span>
</a>
`;
